...
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
...
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
...
